fixed visual footer bug on mobile

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1284,6 +1284,7 @@ footer {
     z-index: 1;
     display: flex;
     flex-direction: column;
+    padding: 1%;
 }
 
 .footer-group {
